@@ -1,5 +1,7 @@
 Version 2.02.22 - 
 ===================================
+  If a PV reappears after it was removed from its VG, make it an orphan.
+  Don't update metadata automatically if VGIDs don't match.
   Fix some vgreduce --removemissing command line validation.
 
 Version 2.02.21 - 30th January 2007
